adicionado codigo css em um arquivo separado

--- a/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -3,46 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>HTML</title>
-    <style>
-      body {
-        font-size: 16px;
-      }
-
-      h1 {
-        font-size: 65px;
-        color: orange;
-        font-family: sans-serif;
-        text-align: center;
-      }
-
-      ul {
-        background-color: rgb(100, 255, 255);        
-      }
-
-      li{ 
-        font-style:oblique;        
-      }
-
-      p {
-        font-weight: 600;
-        font-size: 3em;
-        text-decoration:underline;
-      }
-
-      .qual-sua-cor {
-        background-color:rgb(214, 35, 35);        
-      }
-      #amarelo{
-        background-color: yellow;
-      }
-      #vermelho{
-        background-color: red;
-      }
-      #marrom{
-        background-color: brown;
-      }
-    
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
