--- a/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-4-html-semantico/index.html
+++ b/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-4-html-semantico/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ranking</title>
     <style>
-      h1 {
+      h1{
         text-align: center;
+      }
+
+      li{
+          display: inline-block;  
+          
       }
 
       .first {
@@ -15,6 +20,8 @@
         height: 50px;
         text-align: center;
         width: 200px;
+        display: block;
+        margin: auto;
       }
 
       .second {
@@ -22,7 +29,7 @@
         font-size: 20px;
         height: 50px;
         text-align: center;
-        width: 300px;
+        width: 300px;        
       }
 
       .third {
@@ -33,6 +40,11 @@
         width: 300px;
       }
 
+      .centralizacao{
+          text-align: center;        
+      }
+
+
     </style>
   </head>
   <body>
@@ -40,28 +52,32 @@
       <h1>Hackathon Results</h1>
     </header>
     <section>
-      <ul>
-        <li class="first">1º - Equipe 1</li>
-        <li class="second">2º - Equipe 2</li>
-        <li class="third">3º - Equipe 3</li>
-      </ul>
+        <div class="centralizacao">
+            <ul>
+                <li class="first">1º - Equipe 1</li>
+                <li class="second">2º - Equipe 2</li>
+                <li class="third">3º - Equipe 3</li>
+            </ul>
+        </div>
     </section>
     <section>
-      <h3>Premiação Primeiro Lugar:</h3>
-      <ul>
-        <li>| R$ 1000,00 por integrante da equipe |</li>
-        <li>| Bootcamp de 2 meses com possibilidade de contratação |</li>
-      </ul>
-      <h3>Premiação Segundo Lugar:</h3>
-      <ul>
-        <li>| R$ 600,00 por integrante da equipe |</li>
-        <li>| Participação no processo seletivo para o Bootcamp |</li>
-      </ul>
-      <h3>Premiação Terceiro Lugar:</h3>
-      <ul>
-        <li>| R$ 300,00 por integrante da equipe |</li>
-        <li>| Participação no processo seletivo para o Bootcamp |</li>
-      </ul>
+        <div class="centralizacao">
+            <h3>Premiação Primeiro Lugar:</h3>
+            <ul>
+                <li>| R$ 1000,00 por integrante da equipe |</li>
+                <li>| Bootcamp de 2 meses com possibilidade de contratação |</li>
+            </ul>
+            <h3>Premiação Segundo Lugar:</h3>
+            <ul>
+                <li>| R$ 600,00 por integrante da equipe |</li>
+                <li>| Participação no processo seletivo para o Bootcamp |</li>
+            </ul>
+            <h3>Premiação Terceiro Lugar:</h3>
+            <ul>
+                <li>| R$ 300,00 por integrante da equipe |</li>
+                <li>| Participação no processo seletivo para o Bootcamp |</li>
+            </ul>
+        </div>
     </section>
   </body>
 </html>
