--- a/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-3-html-css-seletores-posicionamento/exercicio_fixacao_agrupamento_de_seletores_e_pseudoclasses/index.html
+++ b/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-3-html-css-seletores-posicionamento/exercicio_fixacao_agrupamento_de_seletores_e_pseudoclasses/index.html
@@ -6,13 +6,18 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Lista dos Melhores Sites que já vi</h1>
+    <h1>Lista dos Melhores Sites que já vi</h1>    
+    <p>Top 3 dos melhores sites que existem na web</p>
     <ol>
-        <li>youtube</li>
-        <li>google</li>
+        <li>Youtube</li>
+        <li>Google</li>
         <li>w3school</li>
     </ol>
-    <p>Top 3 dos melhores sites que existem na web</p>
     <p>Principais motivos para eu gostar deles</p>
+    <ul>
+        <li>Ajudam no aprendizado</li>
+        <li>São dinâmicos</li>
+        <li>Acessíveis</li>
+    </ul>
   </body>
 </html>
