header, nav, main, article, section, imagens titulos e paragramos add

--- a/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-4-html-semantico/exercicios_aula/index.html
+++ b/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-4-html-semantico/exercicios_aula/index.html
@@ -6,5 +6,38 @@
   </head>
   <body>
     <!--insira os elementos aqui-->
+    <header>
+      <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
+      <nav>
+        <a href="#">Página incial</a>
+        <a href="#">Sobre</a>
+        <a href="#">Contato</a>
+      </nav>
+    </header>
+    <main>
+      <Article>
+        <h2>Fatos sobre o Stomatopoda</h2>
+        <img src="img/partes.png" alt="foto ilustrativa das partes do Stomatopoda">
+        <section>
+          <h3>O mais completo sistema de visão do mundo animal</h3>
+          <p>O Stomatopoda (<em>Odontodactylus scyllarus</em>) conhecido popularmente como como tamarutaca ou lacraias-do-mar no brasil, são crustáceos onocientes das cores que enxergam 12 cores primarias... Para termos uma idéia, nós humanos enxergamos 3 cores primárias, vermelho, verde e azul, o que nos permite exergar a imensa variedade de 1 MILHÃO de cores diferentes. Quantas cores esse filho de deus tu acha que enxerga?! Nada menos do que 1 SEPTILHÃO de cores... Como se não bastasse com 12 cones sensiveis a luz e mais 4 cones que filtram a luz totalizando 16 cones ele enxerga cores polarizadas e imagens multiespectrais(luz visível, infravermelha, ultravioleta, RAIO-X!!!). Como ele não foi parar nos X-men eu não sei...</p>
+        </section>
+        <section>
+          <h3>Um dos mais rápidos e violentos golpes do mundo animal</h3>
+          <img src="img/brabao.jpg" alt="cara do stomatopoda" width="500px">
+            <p>Além de uma visão abençoada pelo divino ele veio a este mundo com uma arma amaldiçoada pelo profano... um soco desse amado pode atingir a velocidade de um tiro calibre .22, nada demais... cerca de 720km/h e uma pressão é claro de 600 N/cm². Ganhou até o título de "lagosta-boxeadora" ¬¬ <br> Vai por mim cara... um aquario não segura ele!</p>          
+        </section>
+        <section>
+          <h3>Encontrados em quase todo litoral brasileiro... O.O</h3>
+          <img src="img/litoral.jpeg" alt="Foto do litoral brasileiro">
+          <p>E para a nossa alegria meus conterrâneos brasileiros... ele é encontrado em quase todo litoral do Brasil!! :'D <br> Corremos o risco de tomar um tiro no pé de baixo da água enquanto tomamos um banho no mar... como se já não bastasse né?!</p>
+        </section>
+        <section>
+          <h3>De poucos milimetros a 40cm</h3>
+          <p>Aí tu pensa... "ok, é um crustaceo, deve ter o tamanho de um carangueijo, molusco... seilá" Não meu querido(a) sá disgraça pode chegar a 40cm, e ainda tem gente com medo de abelha.</p>
+          <img src="img/stomatopoda.jpg" alt="imagem do Stomatopoda" width= 500px>
+        </section>
+      </Article>
+    </main>
   </body>
 </html>
