add referencias e negrito

--- a/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-4-html-semantico/exercicios_aula/index.html
+++ b/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-4-html-semantico/exercicios_aula/index.html
@@ -20,12 +20,12 @@
         <img src="img/partes.png" alt="foto ilustrativa das partes do Stomatopoda">
         <section>
           <h3>O mais completo sistema de visão do mundo animal</h3>
-          <p>O Stomatopoda (<em>Odontodactylus scyllarus</em>) conhecido popularmente como como tamarutaca ou lacraias-do-mar no brasil, são crustáceos onocientes das cores que enxergam 12 cores primarias... Para termos uma idéia, nós humanos enxergamos 3 cores primárias, vermelho, verde e azul, o que nos permite exergar a imensa variedade de 1 MILHÃO de cores diferentes. Quantas cores esse filho de deus tu acha que enxerga?! Nada menos do que 1 SEPTILHÃO de cores... Como se não bastasse com 12 cones sensiveis a luz e mais 4 cones que filtram a luz totalizando 16 cones ele enxerga cores polarizadas e imagens multiespectrais(luz visível, infravermelha, ultravioleta, RAIO-X!!!). Como ele não foi parar nos X-men eu não sei...</p>
+          <p>O Stomatopoda (<em>Odontodactylus scyllarus</em>) conhecido popularmente como como tamarutaca ou lacraias-do-mar no brasil, são crustáceos onocientes das cores que enxergam <strong>12 cores primarias</strong>... Para termos uma idéia, nós humanos enxergamos 3 cores primárias, vermelho, verde e azul, o que nos permite exergar a imensa variedade de 1 MILHÃO de cores diferentes. Quantas cores esse filho de deus tu acha que enxerga?! Nada menos do que <strong>1 SEPTILHÃO de cores</strong>... Como se não bastasse com 12 cones sensiveis a luz e mais 4 cones que filtram a luz totalizando 16 cones ele enxerga cores polarizadas e imagens multiespectrais(luz visível, infravermelha, ultravioleta, <strong>RAIO-X!!!</strong>). Esse bixo deveria estar na Marvel...</p>
         </section>
         <section>
           <h3>Um dos mais rápidos e violentos golpes do mundo animal</h3>
           <img src="img/brabao.jpg" alt="cara do stomatopoda" width="500px">
-            <p>Além de uma visão abençoada pelo divino ele veio a este mundo com uma arma amaldiçoada pelo profano... um soco desse amado pode atingir a velocidade de um tiro calibre .22, nada demais... cerca de 720km/h e uma pressão é claro de 600 N/cm². Ganhou até o título de "lagosta-boxeadora" ¬¬ <br> Vai por mim cara... um aquario não segura ele!</p>          
+            <p>Além de uma visão abençoada pelo divino ele veio a este mundo com uma arma amaldiçoada pelo profano... um soco desse amado pode atingir a velocidade de um tiro calibre .22, nada demais... cerca de <strong>720km/h</strong> e uma pressão é claro de <strong>600 N/cm²</strong>. Ganhou até o título de "lagosta-boxeadora" ¬¬ <br> Vai por mim cara... um aquario não segura ele!</p>          
         </section>
         <section>
           <h3>Encontrados em quase todo litoral brasileiro... O.O</h3>
@@ -36,6 +36,13 @@
           <h3>De poucos milimetros a 40cm</h3>
           <p>Aí tu pensa... "ok, é um crustaceo, deve ter o tamanho de um carangueijo, molusco... seilá" Não meu querido(a) sá disgraça pode chegar a 40cm, e ainda tem gente com medo de abelha.</p>
           <img src="img/stomatopoda.jpg" alt="imagem do Stomatopoda" width= 500px>
+        </section>
+        <section>
+          <ul>
+            <h3>Referências bibliográficas</h3>
+            <li>https://pt.wikipedia.org/wiki/Stomatopoda</li>
+            <li>https://theoatmeal.com/comics/mantis_shrimp</li>                     
+          </ul>
         </section>
       </Article>
     </main>
