--- a/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-4-html-semantico/exercicios_aula/index.html
+++ b/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-4-html-semantico/exercicios_aula/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!--insira os elementos aqui-->
@@ -24,7 +25,7 @@
         </section>
         <section>
           <h3>Um dos mais rápidos e violentos golpes do mundo animal</h3>
-          <img src="img/brabao.jpg" alt="cara do stomatopoda" width="500px">
+          <img src="img/brabao.jpg" alt="cara do stomatopoda" width="350px">
             <p>Além de uma visão abençoada pelo divino ele veio a este mundo com uma arma amaldiçoada pelo profano... um soco desse amado pode atingir a velocidade de um tiro calibre .22, nada demais... cerca de <strong>720km/h</strong> e uma pressão é claro de <strong>600 N/cm²</strong>. Ganhou até o título de "lagosta-boxeadora" ¬¬ <br> Vai por mim cara... um aquario não segura ele!</p>          
         </section>
         <section>
@@ -35,7 +36,7 @@
         <section>
           <h3>De poucos milimetros a 40cm</h3>
           <p>Aí tu pensa... "ok, é um crustaceo, deve ter o tamanho de um carangueijo, molusco... seilá" Não meu querido(a) sá disgraça pode chegar a 40cm, e ainda tem gente com medo de abelha.</p>
-          <img src="img/stomatopoda.jpg" alt="imagem do Stomatopoda" width= 500px>
+          <img src="img/stomatopoda.jpg" alt="imagem do Stomatopoda" width= 350px>
         </section>
         <section>
           <ul>
