--- a/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-4-html-semantico/exercicios_aula/index.html
+++ b/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-4-html-semantico/exercicios_aula/index.html
@@ -8,7 +8,7 @@
   <body>
     <!--insira os elementos aqui-->
     <header>
-      <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
+      <h1>Soco a 80km/h: <br> Conheça o Stomatopoda</h1>
       <nav>
         <a href="#">Página incial</a>
         <a href="#">Sobre</a>
@@ -54,6 +54,12 @@
           </ul>
         </section>
       </Article>
+      <aside>
+        <p>Para ver essa criatura maravilhosa em ação, assista o vídeo clicando <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE" target="_blank">aqui</a></p>
+      </aside>
     </main>
+    <footer>
+      <p>Conteúdo compilado por Aron Adams, 2022.</p>
+    </footer>
   </body>
 </html>
