--- a/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-4-html-semantico/exercicios_aula/index.html
+++ b/Fundamentos/Bloco_3_Introducao-a-HTML-e-CSS/dia-4-html-semantico/exercicios_aula/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="style.css">
+    <title>Soco a 80km/h: Conheça o Stomatopoda</title>
   </head>
   <body>
     <!--insira os elementos aqui-->
@@ -55,7 +56,7 @@
         </section>
       </Article>
       <aside>
-        <p>Para ver essa criatura maravilhosa em ação, assista o vídeo clicando <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE" target="_blank">aqui</a></p>
+        <p>Para ver essa criatura maravilhosa em ação, assista o vídeo clicando <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE">aqui</a></p>
       </aside>
     </main>
     <footer>
