exercicio concluido, refatoracao necessaria

--- a/Fundamentos/Bloco_5_java_script_DOM_eventos_e_web_storage/dia-4-web-storage/exercicios-aula/index.html
+++ b/Fundamentos/Bloco_5_java_script_DOM_eventos_e_web_storage/dia-4-web-storage/exercicios-aula/index.html
@@ -52,21 +52,25 @@
     </section>
     <section>
         <div id="box-alteracoes">
-            <input id="corFundo" type="text" placeholder="Escreva a cor do fundo">
-            <button>Altera cor de fundo</button>
-            <input id="corTexto" type="text" placeholder="Escreva a cor do texo">
-            <button>Altera cor do texto</button>
-            <input id="tamanhoFonte" type="text" placeholder="Digite o tamanho da fonte">
-            <button>Altera tamanho da fonte</button>
-            <input id="espacoLinhas" type="text" placeholder="Digite um número">
-            <button>Altera espaço entre as linhas</button>
-            <select id="Fonte" type="text" placeholder="Selecione a fonte que deseja">
+            <input id="input-corFundo" type="text" placeholder="Escreva a cor do fundo">
+            <button id="btn-corFundo">Altera cor de fundo</button>
+
+            <input id="input-corTexto" type="text" placeholder="Escreva a cor do texo">
+            <button id="btn-corTexto">Altera cor do texto</button>
+
+            <input id="input-tamanhoFonte" type="text" placeholder="Digite o tamanho da fonte">
+            <button id="btn-tamanhoFonte">Altera tamanho da fonte</button>
+
+            <input id="input-espacoLinhas" type="text" placeholder="Digite um número">
+            <button id="btn-espacoLinhas">Altera espaço entre as linhas</button>
+
+            <select id="input-Fonte" type="text" placeholder="Selecione a fonte que deseja">
                 <option value="'Courier New', Courier, monospace">'Courier New', Courier, monospace</option>
                 <option value="'Times New Roman', Times, serif">'Times New Roman', Times, serif</option>
                 <option value="Arial, Helvetica, sans-serif">Arial, Helvetica, sans-serif</option>
                 <option value="'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif</option>
             </select>
-            <button>Altera a fonte</button>
+            <button id="btn-Fonte">Altera a fonte</button>
         </div> 
     </section>
     <script src="script.js"></script>
