--- a/Fundamentos/Bloco_6_HTML_e_CSS_forms_flexbox_e_responsivo/dia-2-bibliotecas-javaScript-e-frameworks-CSS/exercicios-aula/form.html
+++ b/Fundamentos/Bloco_6_HTML_e_CSS_forms_flexbox_e_responsivo/dia-2-bibliotecas-javaScript-e-frameworks-CSS/exercicios-aula/form.html
@@ -7,55 +7,67 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exercício - Formulário</title>
   <link rel="stylesheet" href="style.css">
+  <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
-  <header>
+  <header class="text-center p-4">
     <h1>Exercício - Formulário HTML</h1>
   </header>
-  <section>
+  <section class="container p-4">
     <form id="box-form" action="" method="post">
-      <div class="linha-form">
-        <label for="input-nome">Nome completo:</label>
-        <input id="input-nome" type="text" name="nome" minlength="10" maxlength="40">
+      <div class="mb-3">
+        <label for="input-nome" class="form-label">Nome completo:</label>
+        <input id="input-nome" class="form-control" type="text" name="nome" minlength="10" maxlength="40">
       </div>
-      <div class="linha-form">
-        <label for="input-email">Email:</label>
-        <input id="input-email" type="email" name="email" minlength="10" maxlength="50">
+      <div class="mb-3">
+        <label for="input-email" class="form-label">Email:</label>
+        <input id="input-email" class="form-control" type="email" name="email" minlength="10" maxlength="50">
       </div>
-      <div class="linha-form">
-        <legend>Destino Preferido:</legend>
-        <input id="opcao-1" type="radio" name="destino-preferido" value="cidade">
-        <label for="opcao-1">Cidade</label>
-        <input id="opcao-2" type="radio" name="destino-preferido" value="campo">
-        <label for="opcao-2">Campo</label>
-        <input id="opcao-3" type="radio" name="destino-preferido" value="praia">
-        <label for="opcao-3">Praia</label>
-        <input id="opcao-4" type="radio" name="destino-preferido" value="montanhas">
-        <label for="opcao-4">Montanhas</label>
+      <div class="mb-3">    
+        <div>    
+          <label class="form-label" for="">Destino Preferido:</label>
+        </div>
+        <div class="form-check-inline">
+          <input id="opcao-1" class="form-check-input" type="radio" name="destino-preferido" value="cidade">      
+          <label for="opcao-1" class="form-check-label">Cidade</label>
+        </div>
+        <div class="form-check-inline">
+          <input id="opcao-2" class="form-check-input" type="radio" name="destino-preferido" value="campo">      
+          <label for="opcao-2" class="form-check-label">Campo</label>
+        </div>
+        <div class="form-check-inline">
+          <input id="opcao-3" class="form-check-input" type="radio" name="destino-preferido" value="praia">
+          <label for="opcao-3" class="form-check-label">Praia</label>
+        </div>
+        <div class="form-check-inline">
+          <input id="opcao-4" class="form-check-input" type="radio" name="destino-preferido" value="montanhas">
+          <label for="opcao-4" class="form-check-label">Montanhas</label>
+        </div>
       </div>
-      <div class="linha-form">
-      <label for="porque">Por que você deveria ser a pessoa desenvolvedora a ganhar o concurso TrybeTrip?</label>
+      <div class="mb-3">
+      <label for="porque" class="form-label">Por que você deveria ser a pessoa desenvolvedora a ganhar o concurso TrybeTrip?</label>
       <br>
-      <textarea id="porque" name="porque" maxlength="500" cols="55" rows="10"></textarea>
-      </div class="linha-form">
-      <div class="linha-form">
-        <label for="data">Qual a melhor data para realizar sua viagem?</label>
-        <input id="data" type="date" name="data">
+      <textarea id="porque" class="form-control" name="porque" maxlength="500" cols="55" rows="10"></textarea>
       </div>
-      <div class="linha-form">
+      <div class="mb-3">
+        <label for="data">Qual a melhor data para realizar sua viagem?</label>
+        <input id="data" class="form-control" type="date" name="data">
+      </div>
+      <div class="mb-3">
         <label for="promocional">
           <input id="promocional" type="checkbox" name="promocional" value="ok">
           Gostaria de receber outras incríveis oportunidades oferecidas pela Trybe?
         </label>
       </div>
-      <div class="linha-form">
+      <div class="mb-3">
         <label for="direito-imagens">
           <input id="direito-imagens" type="checkbox" name="direito-imagens" value="ok">
           Concordo que imagens das minhas férias poderão ser usadas na divulgação de concursos futuros.
         </label>
       </div>
-      <div class="linha-form">
+      <div class="mb-3">
         <button id="btn-enviar" type="submit">Enviar</button>
         <button id="btn-limpar" type="reset">Apagar</button>
       </div>
