exercicio bonus concluido

--- a/Fundamentos/Bloco_6_HTML_e_CSS_forms_flexbox_e_responsivo/dia-1-HTML-E-CSS-forms/exercicios-aula/form.html
+++ b/Fundamentos/Bloco_6_HTML_e_CSS_forms_flexbox_e_responsivo/dia-1-HTML-E-CSS-forms/exercicios-aula/form.html
@@ -14,7 +14,7 @@
     <h1>Exercício - Formulário HTML</h1>
   </header>
   <section>
-    <form id="box-form" action="" method="post">
+    <form id="box-form" action="#" method="post">
       <div class="linha-form">
         <label for="input-nome">Nome completo:</label>
         <input id="input-nome" type="text" name="nome" minlength="10" maxlength="40">
@@ -51,7 +51,7 @@
       </div>
       <div class="linha-form">
         <label for="direito-imagens">
-          <input id="direito-imagens" type="checkbox" name="direito-imagens" value="ok">
+          <input id="direito-imagens" type="checkbox" name="direito-imagens" required value="ok">
           Concordo que imagens das minhas férias poderão ser usadas na divulgação de concursos futuros.
         </label>
       </div>
