--- a/Fundamentos/Bloco_6_HTML_e_CSS_forms_flexbox_e_responsivo/dia-2-bibliotecas-javaScript-e-frameworks-CSS/exercicios-aula/form.html
+++ b/Fundamentos/Bloco_6_HTML_e_CSS_forms_flexbox_e_responsivo/dia-2-bibliotecas-javaScript-e-frameworks-CSS/exercicios-aula/form.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exercício - Formulário</title>  
-  <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css">
+  <title>Exercício - Formulário</title>
+  <!-- CSS only -->  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
     <h1>Exercício - Formulário HTML</h1>
   </header>
   <section class="container p-4">
-    <form id="box-form" action="" method="post">
+    <form id="box-form" action="#" method="post">
       <div class="mb-3">
         <label for="input-nome" class="form-label">Nome completo:</label>
         <input id="input-nome" required class="form-control" type="text" name="nome" minlength="10" maxlength="40">
@@ -25,16 +26,16 @@
         <label for="input-email" class="form-label">Email:</label>
         <input id="input-email" class="form-control" type="email" name="email" minlength="10" maxlength="50">
       </div>
-      <div class="mb-3">    
-        <div>    
+      <div class="mb-3">
+        <div>
           <label class="form-label" for="">Destino Preferido:</label>
         </div>
         <div class="form-check-inline">
-          <input id="opcao-1" class="form-check-input" type="radio" name="destino-preferido" value="cidade">      
+          <input id="opcao-1" class="form-check-input" type="radio" name="destino-preferido" value="cidade">
           <label for="opcao-1" class="form-check-label">Cidade</label>
         </div>
         <div class="form-check-inline">
-          <input id="opcao-2" class="form-check-input" type="radio" name="destino-preferido" value="campo">      
+          <input id="opcao-2" class="form-check-input" type="radio" name="destino-preferido" value="campo">
           <label for="opcao-2" class="form-check-label">Campo</label>
         </div>
         <div class="form-check-inline">
@@ -47,28 +48,31 @@
         </div>
       </div>
       <div class="mb-3">
-      <label for="porque" class="form-label">Por que você deveria ser a pessoa desenvolvedora a ganhar o concurso TrybeTrip?</label>
-      <br>
-      <textarea id="porque" class="form-control" name="porque" maxlength="500" cols="55" rows="10"></textarea>
+        <label for="porque" class="form-label">Por que você deveria ser a pessoa desenvolvedora a ganhar o concurso
+          TrybeTrip?</label>
+        <br>
+        <textarea id="porque" class="form-control" name="porque" maxlength="500" cols="55" rows="10"></textarea>
       </div>
       <div class="mb-3">
         <label for="data" class="form-label">Qual a melhor data para realizar sua viagem?</label>
         <input id="data" class="form-control" type="date" name="data">
       </div>
       <div class="form-check mb-3">
-          <input id="promocional" class="form-check-input" type="checkbox" name="promocional" value="ok">
-          <label for="promocional" class="form-check-label">Gostaria de receber outras incríveis oportunidades oferecidas pela Trybe?</label>
+        <input id="promocional" class="form-check-input" type="checkbox" name="promocional" value="ok">
+        <label for="promocional" class="form-check-label">Gostaria de receber outras incríveis oportunidades oferecidas
+          pela Trybe?</label>
       </div>
       <div class="form-check mb-3">
-          <input id="direito-imagens" class="form-check-input" type="checkbox" required name="direito-imagens" value="ok">
-          <label for="direito-imagens" class="form-check-label">Concordo que imagens das minhas férias poderão ser usadas na divulgação de concursos futuros.</label>
+        <input id="direito-imagens" class="form-check-input" type="checkbox" required name="direito-imagens" value="ok">
+        <label for="direito-imagens" class="form-check-label">Concordo que imagens das minhas férias poderão ser usadas
+          na divulgação de concursos futuros.</label>
       </div>
       <div class="mb-3">
         <button id="btn-enviar" class="btn btn-success" type="submit">Enviar</button>
         <button id="btn-limpar" class="btn btn-danger" type="reset">Apagar</button>
       </div>
     </form>
-  </section>
+  </section> 
   <script src="script.js"></script>
 </body>
 
