salva modificações feitas no projeto mistery letter

--- a/projetos/sd-021-a-project-mistery-letter/index.html
+++ b/projetos/sd-021-a-project-mistery-letter/index.html
@@ -14,10 +14,10 @@
     <section id="box-input">
         <input id="carta-texto" type="text" placeholder="Digite a carta aqui">
         <button id="criar-carta">Criar carta</button>
-    </section>
-    <section>
-        <p id="carta-gerada"></p>
         <p id="carta-contador"></p>
+    </section>
+    <section id="container-carta">
+        <p id="carta-gerada"></p>        
     </section>
     <script src="script.js"></script>
 </body>
