licoes a aprender atualizadas

--- a/projetos/sd-021-a-project-lessons-learned/index.html
+++ b/projetos/sd-021-a-project-lessons-learned/index.html
@@ -88,13 +88,13 @@
     <section class="lado-direito">
       <h3>Lições a Aprender</h3>
       <ul id="licoes_a_aprender">
-        <li>JavaScript</li>
-        <li>DOM</li>
-        <li>Forms</li>
-        <li>CSS Responsivo</li>
-        <li>ES6</li>
-        <li>HOF</li>
-        <li>Unit Tests</li>
+        <li class="concluido">JavaScript</li>
+        <li class="concluido">DOM</li>
+        <li class="concluido">Forms</li>
+        <li class="concluido">CSS Responsivo</li>
+        <li class="concluido">ES6</li>
+        <li class="concluido">HOF</li>
+        <li class="concluido">Unit Tests</li>
         <li>React</li>
         <li>Node</li>
         <li>SQL</li>
